Fix content align

--- a/frontend/sass/pages/_profileSettings.scss
+++ b/frontend/sass/pages/_profileSettings.scss
@@ -2,11 +2,11 @@
 @use "../abstracts" as abstracts;
 
 .profile-settings {
-  display: inline-flex;
-  justify-content: flex-start;
+  display: flex;
   gap: 40px;
   padding: 20px 40px;
-  width: 100%;
+  width: fit-content;
+  margin: auto;
 
   textarea {
     resize: none;
@@ -100,7 +100,6 @@
     width: 100%;
     max-width: 400px;
     margin: auto;
-    flex: 0;
     padding: 0;
   }
 }
